--- a/lee/period.html
+++ b/lee/period.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>李貞慧 老師-四大時期</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -24,15 +24,15 @@
         </div>
 
         <div class="menu-right">
-            <a href="index.html">
-                <div class="menu-title">
-                    <div>
+            <div class="menu-title">
+                <div>
+                    <a href="index.html">
                         <span>FLOATING FANTASY</span><br />
                         <span>FLOATING FANTASY</span><br />
                         <span>─ Eastern Gouache art of Lee Chen-huei ─</span>
-                    </div>
+                    </a>
                 </div>
-            </a>
+            </div>
             <div class="menu-lists">
                 <div class="menu-list">
                     <a href="period.html">
@@ -43,71 +43,85 @@
                     </a>
                     <div>
                         <div class="menu-second-nav">
-                            <div>
-                                第一期
+                            <a href="period-information.html?id=first">
                                 <div>
-                                    <div class="arrow">
-                                        <div class="arrow-bar"></div>
-                                        <div class="arrow-top"></div>
-                                        <div class="arrow-bottom"></div>
+                                    第一期
+                                    <div>
+                                        <div class="arrow">
+                                            <div class="arrow-bar"></div>
+                                            <div class="arrow-top"></div>
+                                            <div class="arrow-bottom"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="note">小註</div>
+                                <div class="note">小註</div>
+                            </a>
                         </div>
                         <div class="menu-second-nav">
-                            <div>
-                                第二期
+                            <a href="period-information.html?id=second">
                                 <div>
-                                    <div class="arrow">
-                                        <div class="arrow-bar"></div>
-                                        <div class="arrow-top"></div>
-                                        <div class="arrow-bottom"></div>
+                                    第二期
+                                    <div>
+                                        <div class="arrow">
+                                            <div class="arrow-bar"></div>
+                                            <div class="arrow-top"></div>
+                                            <div class="arrow-bottom"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="note">小註</div>
+                                <div class="note">小註</div>
+                            </a>
                         </div>
                         <div class="menu-second-nav">
-                            <div>
-                                第三期
+                            <a href="period-information.html?id=third">
                                 <div>
-                                    <div class="arrow">
-                                        <div class="arrow-bar"></div>
-                                        <div class="arrow-top"></div>
-                                        <div class="arrow-bottom"></div>
+                                    第三期
+                                    <div>
+                                        <div class="arrow">
+                                            <div class="arrow-bar"></div>
+                                            <div class="arrow-top"></div>
+                                            <div class="arrow-bottom"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="note">小註</div>
+                                <div class="note">小註</div>
+                            </a>
                         </div>
                         <div class="menu-second-nav">
-                            <div>
-                                第四期
+                            <a href="period-information.html?id=fourth">
                                 <div>
-                                    <div class="arrow">
-                                        <div class="arrow-bar"></div>
-                                        <div class="arrow-top"></div>
-                                        <div class="arrow-bottom"></div>
+                                    第四期
+                                    <div>
+                                        <div class="arrow">
+                                            <div class="arrow-bar"></div>
+                                            <div class="arrow-top"></div>
+                                            <div class="arrow-bottom"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="note">小註</div>
+                                <div class="note">小註</div>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="menu-list">
                     <div class="menu-nav">
-                        作者介紹<span> - 小註</span>
-                        <div class="bottom-line"></div>
+                        <a href="artist.html">
+                            作者介紹<span> - 小註</span>
+                            <div class="bottom-line"></div>
+                        </a>
                     </div>
                     <div class="menu-nav">
-                        展覽理念<span> - 小註</span>
-                        <div class="bottom-line"></div>
+                        <a href="about.html">
+                            展覽理念<span> - 小註</span>
+                            <div class="bottom-line"></div>
+                        </a>
                     </div>
                     <div class="menu-nav">
-                        動態消息<span> - 小註</span>
-                        <div class="bottom-line"></div>
+                        <a href="information.html">
+                            動態消息<span> - 小註</span>
+                            <div class="bottom-line"></div>
+                        </a>
                     </div>
                 </div>
                 <div class="menu-list">
@@ -144,42 +158,28 @@
             <div class="section-content">
                 <div class="section-content-title">李貞慧老師的作品一共分為四期，每期各挑出了六張畫作來介紹</div>
                 <div class="periods">
-                    <div class="period">
+                    <div data-tilt data-tilt-glare data-tilt-max-glare="0.8" data-tilt-reverse="true" data-tilt-reset="false" class="period period-1">
                         <div class="number">1</div>
                         <div class="period-img period-img1"></div>
-                        <div class="period-text">
-                            寒林深秋,1993<br />
-                            老師使用多種色彩創作，楓紅的樹葉及還未枯黃的綠葉相互交縱著，乍看之下彷彿是異世界空間，充滿混沌，其中的亮光為我照亮心中的不安，混沌世界也能成為彩色幻境。
-                        </div>
+                        <div class="period-text">第一期的簡單介紹。</div>
                     </div>
 
-                    <div class="period">
+                    <div data-tilt data-tilt-glare data-tilt-max-glare="0.8" data-tilt-reverse="true" data-tilt-reset="false" class="period period-2">
                         <div class="number">2</div>
                         <div class="period-img period-img2"></div>
-                        <div class="period-text">
-                            樹洞,1994<br />
-                            豐富多元的色彩，繪出樹幹的年邁堅毅，以隨興的筆觸堆疊粗獷肌理，營造雄厚磅礡的氣勢。
-
-                        </div>
+                        <div class="period-text">第二期的簡單介紹。</div>
                     </div>
 
-                    <div class="period">
+                    <div data-tilt data-tilt-glare data-tilt-max-glare="0.8" data-tilt-reverse="true" data-tilt-reset="false" class="period period-3">
                         <div class="number">3</div>
                         <div class="period-img period-img3"></div>
-                        <div class="period-text">
-                            潸然,2005<br />
-                            作者以灰白筆墨描繪如遠處山巒的輪廓，區隔明亮和灰暗的漸變，強化畫面上下的明暗對比，彰顯畫面張力。
-                        </div>
+                        <div class="period-text">第三期的簡單介紹。</div>
                     </div>
 
-                    <div class="period">
+                    <div data-tilt data-tilt-glare data-tilt-max-glare="0.8" data-tilt-reverse="true" data-tilt-reset="false" class="period period-4">
                         <div class="number">4</div>
                         <div class="period-img period-img4"></div>
-                        <div class="period-text">
-                            芳草,2006<br />
-                            以宏觀的視野，大筆刷染、奔放揮毫出一幅耐人尋味的草原景象，作品畫面自然清雅、氣韻生動又兼具光彩迷幻之美。
-
-                        </div>
+                        <div class="period-text">第四期的簡單介紹。</div>
                     </div>
                 </div>
             </div>
@@ -194,20 +194,27 @@
     <script src="js/scrollreveal.js"></script>
     <script src="js/script.js"></script>
     <script src="js/header.js"></script>
+    <script src="js/vanilla-tilt.min.js"></script>
     <script>
         window.addEventListener('scroll', function () {
             const pageScroll = document.body.scrollTop || document.documentElement.scrollTop;
             const height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
             const scrollValue = (pageScroll / height) * 100;
             $('.bar').css('height', scrollValue + "%")
-
-            // if (scrollValue >= 50) {
-            //     $('.text').text('ABOUT');
-            // } else {
-            //     $('.text').text('HOMEPAGE');
-            // }
         });
 
+        $('.period-1').click(()=>{
+            window.location = 'period-information.html?id=first';
+        });
+        $('.period-2').click(()=>{
+            window.location = 'period-information.html?id=second';
+        });
+        $('.period-3').click(()=>{
+            window.location = 'period-information.html?id=third';
+        });
+        $('.period-4').click(()=>{
+            window.location = 'period-information.html?id=fourth';
+        });
     </script>
 </body>
 
