--- a/lee/index.html
+++ b/lee/index.html
@@ -11,9 +11,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/loader.css">
 </head>
 
 <body>
+    <div class="loader_bg">
+        <div class="loader"></div>
+    </div>
+
     <div id="btn">
         <i class="fa-solid fa-bars"></i>
     </div>
@@ -198,6 +203,26 @@
     <script src="js/script.js"></script>
     <script src="js/header.js"></script>
     <script>
+        let imgs = ['./resource/banner-min.jpg'];
+
+        $(document).ready(function () {
+            loadImg();
+        });
+
+        function loadImg() {
+            for (let i = 0; i < imgs.length; i++) {
+                var img = new Image();
+                $(img).on('load', function () {
+                    // console.log(aa[i]);
+                });
+                img.src = imgs[i];
+            }
+            $('.loader_bg').css('opacity', '0');
+            setTimeout(() => {
+                $('.loader_bg').hide();
+            }, 1500);
+        };
+
         window.addEventListener('scroll', function () {
             const pageScroll = document.body.scrollTop || document.documentElement.scrollTop;
             const height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
@@ -210,7 +235,6 @@
                 $('.text').text('ABOUT');
             }
         });
-
     </script>
 </body>
 
