--- a/lee/index.html
+++ b/lee/index.html
@@ -46,7 +46,7 @@
                             <div class="bottom-line"></div>
                         </div>
                     </a>
-                    <div>
+                    <div class="second-navs">
                         <div class="menu-second-nav">
                             <a href="period-information.html?id=first">
                                 <div>
