--- a/lee/index.html
+++ b/lee/index.html
@@ -153,7 +153,7 @@
     </div>
 
     <div class="right">
-        <section class="section1">
+        <section class="section-1">
             <div class="sec-title">
                 <div>
                     <a href="index.html">
@@ -163,8 +163,18 @@
                     </a>
                 </div>
             </div>
+            <div class="section-animation">
+                <div class="section-imgs">
+                    <img src="resource/banner.jpg">
+                    <img src="resource/remake.jpg">
+                    <img src="resource/banner.jpg">
+                    <img src="resource/remake.jpg">
+                    <img src="resource/banner.jpg">
+                    <img src="resource/remake.jpg">
+                </div>
+            </div>
         </section>
-        <section class="section2">
+        <section class="section-2">
             <div class="sec-left">
                 <div>
                     <div class="left-title">
