--- a/lee/artist.html
+++ b/lee/artist.html
@@ -11,6 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" href="css/artist.css">
 </head>
 
 <body>
@@ -152,7 +153,121 @@
     </div>
 
     <div class="right">
+        <section class="section-1">
+            <div class="header-title">
+                <div>
+                    <a href="index.html">
+                        <span>FLOATING FANTASY</span><br />
+                        <span>FLOATING FANTASY</span><br />
+                        <span>─ Eastern Gouache art of Lee Chen-huei ─</span>
+                    </a>
+                </div>
+            </div>
 
+            <div class="section-top">
+                <div class="section-left">
+                    <div>Introduction of artist</div>
+                    <div>畫家介紹</div>
+                </div>
+                <div class="section-right">
+                    <img src="resource/banner.jpg" class="image">
+                </div>
+            </div>
+
+            <div class="section-bottom">
+                李貞慧老師的介紹文字，李貞慧老師的介紹文字，李貞慧老師的介紹文字，李貞慧老師的介紹文字，李貞慧老師的介紹文字，李貞慧老師的介紹文字，李貞慧老師的介紹文字，李貞慧老師的介紹文字，李貞慧老師的介紹文字，李貞慧老師的介紹文字。
+            </div>
+
+        </section>
+
+        <section class="section-2">
+
+            <div class="section-title">
+                <div class="section-title-line"></div>
+                <div class="section-title-text">Eastern Gouache
+                    <div class="section-title-second-text">膠彩藝術</div>
+                </div>
+            </div>
+
+            <div class="section-content-1">
+                <div class="section-left-1">
+                    <div>個人座右銘</div>
+                    <div>作者</div>
+                    <div>李貞慧</div>
+                    <div>Lee Chen-huei</div>
+                </div>
+                <div class="section-right-1">
+                    <img src="resource/banner.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="section-content-2">
+                <div class="section-left-2">
+
+                    <div class="section-title">
+                        <div class="section-title-line"></div>
+                        <div class="section-title-second-text"> 最高學歷：</div>
+                    </div>
+
+                    <div class="section-left-content left-content-1">
+                        <div>國內：1987 私立東海大學美術系畢業</div>
+                        <div>國外：1993 日本國立筑波大學藝術研究所畢業</div>
+                    </div>
+
+                    <div class="section-title">
+                        <div class="section-title-line"></div>
+                        <div class="section-title-second-text">研究專長 | Research：</div>
+                    </div>
+
+                    <div class="section-left-content left-content-2">
+                        <div>膠彩、素描、繪畫創作、國畫、工筆花鳥、民俗藝術製作</div>
+                    </div>
+
+
+                    <div class="section-title">
+                        <div class="section-title-line"></div>
+                        <div class="section-title-second-text">現任：</div>
+                    </div>
+
+                    <div class="section-left-content left-content-3">
+                        <div>東海大學美術系專任教授</div>
+                        <div>兼任美術系學士學分班班主任</div>
+                        <div>東海大學美術系系主任</div>
+                    </div>
+                </div>
+
+                <div class="section-right-2">
+                    <div class="section-right-title">經歷</div>
+                    <div class="section-right-text">
+                        <div>• 1987 私立東海大學美術系畢業<br />
+                            <span>• 1987</span>、留校任助教
+                        </div><br />
+                        <div>• 1993 日本國立筑波大學藝術研究所碩士<br />
+                            <span>• 1993</span>、私立東海大學美術系兼任講師
+                        </div><br />
+                        <div>• 1994 東海大學美術系專任講師<br />
+                            <span>• 1994</span>、國立藝術學院(台北藝術大學)美術系兼任講師
+                        </div><br />
+                        <div>• 1998 東海大學美術系專任副教授<br />
+                            <span>• 1998</span>（1998 ~迄今）
+                        </div><br />
+                        <div>• 2004 東海大學美術系主任<br />
+                            <span>• 2004</span>（2004~2007)
+                        </div><br />
+                        <div>• 2007 東海大學美術系學士學分班班主任<br />
+                            <span>• 2007</span>（2007~迄今)
+                        </div><br />
+                        <div>• 2008 國立台灣師範大學美術系兼任副教授<br />
+                            <span>• 2008</span>（2008-2011)
+                        </div><br />
+                        <div>• 2017 東海大學美術系專任教授<br />
+                            <span>•2017</span>（2017~ 迄今）
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </div>
 
 
