--- a/lee/index.html
+++ b/lee/index.html
@@ -154,7 +154,7 @@
 
     <div class="right">
         <section class="section-1">
-            <div class="sec-title">
+            <div class="header-title">
                 <div>
                     <a href="index.html">
                         <span>FLOATING FANTASY</span><br />
