--- a/lee/period.html
+++ b/lee/period.html
@@ -155,7 +155,7 @@
     </div>
     <div class="right">
         <section class="section-1">
-            <div class="sec-title">
+            <div class="header-title">
                 <div>
                     <a href="index.html">
                         <span>FLOATING FANTASY</span><br />
